Penambahan tampilan Admin

--- a/app/src/main/res/layout/activity_admin_nav_header.xml
+++ b/app/src/main/res/layout/activity_admin_nav_header.xml
@@ -5,8 +5,10 @@
     android:layout_gravity="top"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
+    android:gravity="bottom"
     android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:id="@+id/nav_header">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -14,11 +16,13 @@
         android:src="@mipmap/ic_launcher_round" />
 
     <TextView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Coding in Flow"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="Mencoba Menu android"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        />
 
     <TextView
         android:layout_width="wrap_content"
