--- a/app/src/main/res/layout/activity_admin_galeri.xml
+++ b/app/src/main/res/layout/activity_admin_galeri.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.Admin_home">
+    tools:context=".Admin.Admin_galeri">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="THIS IS FRAGMENT HOME"
+        android:text="THIS IS FRAGMENT GALERI"
         android:textSize="25sp"
         android:layout_centerInParent="true"/>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
