--- a/app/src/main/res/layout/activity_admin_profil.xml
+++ b/app/src/main/res/layout/activity_admin_profil.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.Admin_home">
+    tools:context=".Admin.Admin_profil">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="THIS IS FRAGMENT HOME"
+        android:text="THIS IS FRAGMENT PROFIL"
         android:textSize="25sp"
         android:layout_centerInParent="true"/>
-
 
 </RelativeLayout>
