--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -10,58 +10,60 @@
         android:id="@+id/old_email"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="120dp"
         android:hint="@string/hint_email"
         android:inputType="textEmailAddress"
         android:maxLines="1"
-        tools:layout_editor_absoluteY="82dp"
         tools:layout_editor_absoluteX="8dp"
-        android:layout_above="@+id/password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="17dp" />
+        tools:layout_editor_absoluteY="82dp" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+
+        android:layout_marginTop="185dp"
         android:focusableInTouchMode="true"
         android:hint="@string/prompt_password"
-
         android:imeOptions="actionUnspecified"
         android:inputType="textPassword"
         android:maxLines="1"
         tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="125dp"
-        android:layout_above="@+id/newPassword"
-        android:layout_toEndOf="@+id/progressBar" />
+        tools:layout_editor_absoluteY="125dp" />
 
     <EditText
         android:id="@+id/newPassword"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+
         android:focusableInTouchMode="true"
         android:hint="@string/new_pass"
-
         android:imeOptions="actionUnspecified"
         android:inputType="textPassword"
         android:maxLines="1"
         tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="168dp"
-        android:layout_above="@+id/changePass"
-        android:layout_alignParentStart="true" />
+        tools:layout_editor_absoluteY="168dp" />
 
     <Button
         android:id="@+id/changePass"
         style="?android:textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="217dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/btn_change"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        tools:layout_editor_absoluteY="211dp"
         tools:layout_editor_absoluteX="199dp"
-        android:layout_above="@+id/remove"
-        android:layout_centerHorizontal="true" />
+        tools:layout_editor_absoluteY="211dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -76,26 +78,40 @@
         style="?android:textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/changePass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-217dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/btn_remove"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        tools:layout_editor_absoluteY="259dp"
         tools:layout_editor_absoluteX="199dp"
-        android:layout_above="@+id/change_password_button"
-        android:layout_alignStart="@+id/changePass" />
+        tools:layout_editor_absoluteY="259dp" />
+
+    <Button
+        android:id="@+id/btn_admin"
+        style="?android:textAppearanceSmall"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="140dp"
+        android:text="Daftar Pemilik Kost"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="312dp" />
 
     <Button
         android:id="@+id/change_password_button"
         style="?android:textAppearanceSmall"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/remove_user_button"
+        android:layout_centerHorizontal="true"
         android:text="@string/change_password"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="312dp"
-        android:layout_above="@+id/remove_user_button"
-        android:layout_alignStart="@+id/remove_user_button" />
+        tools:layout_editor_absoluteY="312dp" />
 
     <Button
         android:id="@+id/remove_user_button"
@@ -127,9 +143,9 @@
         android:id="@+id/useremail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/old_email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="46dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
         android:gravity="center"
         android:hint="@string/email_id"
         android:textSize="30sp"
